# pyqtc

./: .gitignore  CMakeLists.txt  README.md
cmake/: Protobuf.cmake  Pylint.cmake  QtCreatorVersion.cmake  TestPython.cmake  pylint.rc
common/: codemodel.proto  rpc.proto
parser/: CMakeLists.txt  main.py  messagehandler.py  parse.py  symbolindex.py  typedes.py  worker.py
plugin/: CMakeLists.txt  PythonEditor.mimetypes.xml  closure.cpp  closure.h  closurehelpers.h  codemodel.cpp  codemodel.h  completionassist.cpp  completionassist.h  config.cpp.in  config.h  config.h.in  constants.cpp  constants.h  editorfactory.cpp  editorfactory.h  editorwidget.cpp  editorwidget.h  hoverhandler.cpp  hoverhandler.h  messagehandler.cpp  messagehandler.h  miniparser.cpp  miniparser.h  plugin.cpp  plugin.h  projects.cpp  projects.h  pyqtc.pluginspec  pyqtc.pluginspec.in  pyqtc.pro  python-2.7.2.qhc  pythoneditor.cpp  pythoneditor.h  pythoneditorfactory.cpp  pythoneditorfactory.h  pythonfilter.cpp  pythonfilter.h  pythonicons.cpp  pythonicons.h  (+8 more)
protoc-gen-cpp_qt/: CMakeLists.txt  cpp_enum.cc  cpp_enum.h  cpp_enum_field.cc  cpp_enum_field.h  cpp_extension.cc  cpp_extension.h  cpp_field.cc  cpp_field.h  cpp_file.cc  cpp_file.h  cpp_generator.cc  cpp_generator.h  cpp_helpers.cc  cpp_helpers.h  cpp_message.cc  cpp_message.h  cpp_message_field.cc  cpp_message_field.h  cpp_primitive_field.cc  cpp_primitive_field.h  cpp_service.cc  cpp_service.h  cpp_string_field.cc  cpp_string_field.h  main.cc  substitute.h
tests/: test_parse.py
tools/: closuregen.py  sphinx2qhcp.py
tools/sphinx-theme/: layout.html  theme.conf
